# code-samples

./: README.md
cpp/text_file_scan/: CMakeLists.txt
cpp/text_file_scan/docs/: _Тестовое задание.docx
cpp/text_file_scan/src/: CMakeLists.txt  main.cpp
cpp/text_file_scan/src/app/: Application.cpp
cpp/text_file_scan/src/app/include/app/: AppOption.h  Application.fwd.h  Application.h
cpp/text_file_scan/src/cmd/: CmdOptions.cpp
cpp/text_file_scan/src/cmd/include/cmd/: CmdOptions.h
cpp/text_file_scan/src/creators/include/creators/: InputFilenameTaskCreator.h  OperationTaskCreator.h  ProgramUsageTaskCreator.h  TaskCreator.cpp  TaskCreator.h  WordTaskCreator.h
cpp/text_file_scan/src/tasks/: OperationTask.cpp  ProgramUsageTask.cpp
cpp/text_file_scan/src/tasks/include/tasks/: IExecutableTask.h  OperationTask.h  ProgramUsageTask.h
cpp/updater/device/: DeviceInfo.h  DeviceObserver.h
cpp/updater/taskGatherer/: UpdateStrategySelector.cpp  UpdateStrategySelector.h
cpp/updater/taskGatherer/strategies/: StrategyBase.cpp  StrategyBase.h
cpp/updater/taskGatherer/strategies/impl/: DeleteOldFilesThenCopyNew.cpp  DeleteOldFilesThenCopyNew.h  DownloadFilesFirst.cpp  DownloadFilesFirst.h
cpp/updater/tasks/: CopyFiles.h  TaskBase.cpp  TaskBase.h
cpp/updater/tasks/helpers/: FileMaskFiler.cpp  FileMaskFiler.h
java/dvr/receivers/: GaugesChangeReceiver.java
java/dvr/receivers/parsers/: MessageParser.java
java/dvr/ui/gauges/: GaugesViewManager.java
java/dvr/ui/gauges/states/: IState.java
java/dvr/ui/gauges/states/impl/: EmptyState.java  NoAppState.java
java/dvr/ui/video/: VideoListAdapter.java
